edit index + color edit

--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
     <div class="mainInfo">
         <h1 style="text-transform: unset">We make<br>
             brands different</h1>
-        <h2>Creating outstanding visuals for businesses
+        <h2>Creating stunning 3D visualizations for businesses
             in&nbsp;furniture and home decor&nbsp;fields.</h2>
         <h2 class="h2hide">Creating outstanding visuals</h2>
-        <div class="mainCta"><a class="button" id="mainBtnMob" href="javascript:void(0)">Show more</a></div>
+        <div class="mainCta"><a class="button" id="mainBtnMob" href="javascript:void(0)">Free consultation</a></div>
     </div>
     <div class="mobileAction">
-        <div class="buttonWrap"><a class="button" id="mainBtnMob" href="javascript:void(0)">Show more</a></div>
+        <div class="buttonWrap"><a class="button" id="mainBtnMob" href="javascript:void(0)">Free consultation</a></div>
     </div>
     <div class="about" id="about">
         <h1>Trusted by global brands</h1>
@@ -131,7 +131,6 @@
                 <p class="date">6.feb 2020</p>
             </div>
         </div>
-        <!-- <div class="buttonWrap"><a class="button" href="">History</a></div> -->
     </div>
     <div class="portfolio">
         <h1>3D visualization portfolio</h1>
@@ -156,7 +155,7 @@
             <img class="actualImg" src="#">
         </div>
     </div>
-    <div class="cases">
+    <!-- <div class="cases">
         <h1>Case studies</h1>
         <p>Some of our large scale projects</p>
         <div class="caseCarouselStudy owl-carousel owl-theme">
@@ -165,8 +164,8 @@
             <div class="case study3"></div>
         </div>
         <div class="buttonWrap"><a class="button" href="#">See all</a></div>
-    </div>
-    <div class="calendar">
+    </div> -->
+    <div class="calendar" id="calendar">
         <h1>Free consultation</h1>
         <p>We understand that the world of 3D can be overwhelming. If&nbsp;you are just starting
             with 3D visualizations or have no experience at all, shoot us your email and we
